# dj-redis-panel

./: .gitignore  404.html  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: publish.yml  python-publish.yml  test.yml
configuration/: index.html
development/: index.html
dj_redis_panel/: admin.py  apps.py  conf.py  encoding_utils.py  models.py  panel.py  redis_utils.py  urls.py  views.py
dj_redis_panel/templates/admin/dj_redis_panel/: base.html  index.html  instance_overview.html  key_add.html  key_detail.html  key_detail_add.html  key_detail_pagination.html  key_detail_pagination_info.html  key_detail_value_hash.html  key_detail_value_list.html  key_detail_value_set.html  key_detail_value_string.html  key_detail_value_zset.html  key_search.html  styles.css
docs/: configuration.md  development.md  features.md  index.md  installation.md  quick-start.md  testing.md
example_project/: Dockerfile
example_project/example_project/: settings.py  urls.py
example_project/example_project/management/commands/: populate_redis.py
features/: index.html
installation/: index.html
quick-start/: index.html
scripts/: generate-ssl-certs.sh
search/: search_index.json
testing/: index.html
tests/: base.py  conftest.py  test_admin.py  test_binary_data.py  test_cluster.py  test_collection_member_add.py  test_collection_member_delete.py  test_collection_member_edit.py  test_enhanced_metadata.py  test_flush.py  test_index.py  test_instance_overview.py  test_key_add.py  test_key_detail.py  test_key_search.py  test_pagination_limits.py  test_sentinel.py
