[metadata]
name = dj-redis-panel
version = 0.1.0
description = A Django Admin panel for browsing and inspecting Redis keys
long_description = file: README.md
long_description_content_type = text/markdown
author = Yasser Toruno
license = MIT
url = https://github.com/yassi/dj-redis-panel
project_urls =
    Documentation = https://github.com/yassi/dj-redis-panel
    Source = https://github.com/yassi/dj-redis-panel
classifiers =
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
include_package_data = true
install_requires =
    Django>=4.2
    redis>=4.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests
    example_project

[options.extras_require]
dev =
    pytest
    pytest-django
